// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`engine, notes/ basics bad parse  1`] = `"{\\"opts\\":{\\"status\\":\\"bad_parse_for_note\\",\\"msg\\":\\"{\\\\\\"fname\\\\\\":\\\\\\"foo.md\\\\\\",\\\\\\"error\\\\\\":\\\\\\"can not read a block mapping entry; a multiline key may not be an implicit key at line 5, column 1:\\\\\\\\n    \\\\\\\\n    ^\\\\\\"}\\"},\\"status\\":\\"bad_parse_for_note\\"}"`;

exports[`engine, notes/ basics only root 1`] = `
Object {
  "root": Object {
    "body": "
",
    "children": Array [],
    "created": "1",
    "custom": Object {},
    "data": Object {},
    "desc": "",
    "fname": "root",
    "id": "root",
    "parent": null,
    "title": "Root",
    "type": "note",
    "updated": "1",
  },
}
`;

exports[`engine, notes/ basics root and two notes 1`] = `
Object {
  "foo": Object {
    "body": "
",
    "children": Array [
      "foo.ch1",
    ],
    "created": "1",
    "custom": Object {},
    "data": Object {},
    "desc": "",
    "fname": "foo",
    "id": "foo",
    "parent": "root",
    "title": "Foo",
    "type": "note",
    "updated": "1",
  },
  "foo.ch1": Object {
    "body": "
",
    "children": Array [],
    "created": "1",
    "custom": Object {},
    "data": Object {},
    "desc": "",
    "fname": "foo.ch1",
    "id": "foo.ch1",
    "parent": "foo",
    "title": "Ch1",
    "type": "note",
    "updated": "1",
  },
  "root": Object {
    "body": "
",
    "children": Array [
      "foo",
    ],
    "created": "1",
    "custom": Object {},
    "data": Object {},
    "desc": "",
    "fname": "root",
    "id": "root",
    "parent": null,
    "title": "Root",
    "type": "note",
    "updated": "1",
  },
}
`;

exports[`engine, notes/ basics stub note 1`] = `
Array [
  "foo.ch1.md",
  "root.md",
  "root.schema.yml",
]
`;

exports[`engine, notes/ basics write note 1`] = `
Object {
  "bar": Object {
    "body": "",
    "children": Array [],
    "created": "1",
    "custom": undefined,
    "data": Object {},
    "desc": "",
    "fname": "bar",
    "id": "bar",
    "parent": "root",
    "title": "Bar",
    "type": "note",
    "updated": "1",
  },
  "root": Object {
    "body": "
",
    "children": Array [
      "bar",
    ],
    "created": "1",
    "custom": Object {},
    "data": Object {},
    "desc": "",
    "fname": "root",
    "id": "root",
    "parent": null,
    "title": "Root",
    "type": "note",
    "updated": "1",
  },
}
`;

exports[`engine, notes/ schemas/ root and two notes 1`] = `
Object {
  "foo": Object {
    "body": "
",
    "children": Array [
      "foo.ch1",
    ],
    "created": "1",
    "custom": Object {},
    "data": Object {},
    "desc": "",
    "fname": "foo",
    "id": "foo",
    "parent": "root",
    "schema": Object {
      "moduleId": "foo",
      "schemaId": "foo",
    },
    "title": "Foo",
    "type": "note",
    "updated": "1",
  },
  "foo.ch1": Object {
    "body": "
",
    "children": Array [],
    "created": "1",
    "custom": Object {},
    "data": Object {},
    "desc": "",
    "fname": "foo.ch1",
    "id": "foo.ch1",
    "parent": "foo",
    "schema": Object {
      "moduleId": "foo",
      "schemaId": "ch1",
    },
    "title": "Ch1",
    "type": "note",
    "updated": "1",
  },
  "root": Object {
    "body": "
",
    "children": Array [
      "foo",
    ],
    "created": "1",
    "custom": Object {},
    "data": Object {},
    "desc": "",
    "fname": "root",
    "id": "root",
    "parent": null,
    "title": "Root",
    "type": "note",
    "updated": "1",
  },
}
`;

exports[`engine, notes/ schemas/ root and two notes 2`] = `
Object {
  "foo": Object {
    "fname": "foo.schema",
    "imports": null,
    "root": Object {
      "body": "",
      "children": Array [
        "ch1",
      ],
      "created": "1",
      "custom": null,
      "data": Object {},
      "desc": "",
      "fname": "foo.schema",
      "id": "foo",
      "parent": "root",
      "title": "foo",
      "type": "schema",
      "updated": "1",
    },
    "schemas": Object {
      "ch1": Object {
        "body": "",
        "children": Array [],
        "created": "1",
        "custom": null,
        "data": Object {},
        "desc": "",
        "fname": "foo.schema",
        "id": "ch1",
        "parent": "foo",
        "title": "ch1",
        "type": "schema",
        "updated": "1",
      },
      "foo": Object {
        "body": "",
        "children": Array [
          "ch1",
        ],
        "created": "1",
        "custom": null,
        "data": Object {},
        "desc": "",
        "fname": "foo.schema",
        "id": "foo",
        "parent": "root",
        "title": "foo",
        "type": "schema",
        "updated": "1",
      },
    },
    "version": 1,
  },
  "root": Object {
    "fname": "root.schema",
    "imports": Array [],
    "root": Object {
      "body": "",
      "children": Array [],
      "created": "1",
      "custom": null,
      "data": Object {},
      "desc": "",
      "fname": "root.schema",
      "id": "root",
      "parent": null,
      "title": "root",
      "type": "schema",
      "updated": "1",
    },
    "schemas": Object {
      "root": Object {
        "body": "",
        "children": Array [],
        "created": "1",
        "custom": null,
        "data": Object {},
        "desc": "",
        "fname": "root.schema",
        "id": "root",
        "parent": null,
        "title": "root",
        "type": "schema",
        "updated": "1",
      },
    },
    "version": 1,
  },
}
`;

exports[`engine, schema/ basics/ only root 1`] = `
Object {
  "root": Object {
    "fname": "root.schema",
    "imports": Array [],
    "root": Object {
      "body": "",
      "children": Array [],
      "created": "1",
      "custom": null,
      "data": Object {},
      "desc": "",
      "fname": "root.schema",
      "id": "root",
      "parent": null,
      "title": "root",
      "type": "schema",
      "updated": "1",
    },
    "schemas": Object {
      "root": Object {
        "body": "",
        "children": Array [],
        "created": "1",
        "custom": null,
        "data": Object {},
        "desc": "",
        "fname": "root.schema",
        "id": "root",
        "parent": null,
        "title": "root",
        "type": "schema",
        "updated": "1",
      },
    },
    "version": 1,
  },
}
`;

exports[`engine, schema/ basics/ root and one schem 1`] = `
Object {
  "foo": Object {
    "fname": "foo.schema",
    "imports": null,
    "root": Object {
      "body": "",
      "children": Array [
        "ch1",
      ],
      "created": "1",
      "custom": null,
      "data": Object {},
      "desc": "",
      "fname": "foo.schema",
      "id": "foo",
      "parent": "root",
      "title": "foo",
      "type": "schema",
      "updated": "1",
    },
    "schemas": Object {
      "ch1": Object {
        "body": "",
        "children": Array [],
        "created": "1",
        "custom": null,
        "data": Object {},
        "desc": "",
        "fname": "foo.schema",
        "id": "ch1",
        "parent": "foo",
        "title": "ch1",
        "type": "schema",
        "updated": "1",
      },
      "foo": Object {
        "body": "",
        "children": Array [
          "ch1",
        ],
        "created": "1",
        "custom": null,
        "data": Object {},
        "desc": "",
        "fname": "foo.schema",
        "id": "foo",
        "parent": "root",
        "title": "foo",
        "type": "schema",
        "updated": "1",
      },
    },
    "version": 1,
  },
  "root": Object {
    "fname": "root.schema",
    "imports": Array [],
    "root": Object {
      "body": "",
      "children": Array [],
      "created": "1",
      "custom": null,
      "data": Object {},
      "desc": "",
      "fname": "root.schema",
      "id": "root",
      "parent": null,
      "title": "root",
      "type": "schema",
      "updated": "1",
    },
    "schemas": Object {
      "root": Object {
        "body": "",
        "children": Array [],
        "created": "1",
        "custom": null,
        "data": Object {},
        "desc": "",
        "fname": "root.schema",
        "id": "root",
        "parent": null,
        "title": "root",
        "type": "schema",
        "updated": "1",
      },
    },
    "version": 1,
  },
}
`;

exports[`engine, schema/ basics/ write new module 1`] = `
Object {
  "bar": Object {
    "fname": "bar.schema",
    "imports": undefined,
    "root": Object {
      "body": "",
      "children": Array [
        "ch1",
      ],
      "created": "1",
      "custom": undefined,
      "data": Object {},
      "desc": "",
      "fname": "bar.schema",
      "id": "bar",
      "parent": "root",
      "title": "bar",
      "type": "schema",
      "updated": "1",
    },
    "schemas": Object {
      "bar": Object {
        "body": "",
        "children": Array [
          "ch1",
        ],
        "created": "1",
        "custom": undefined,
        "data": Object {},
        "desc": "",
        "fname": "bar.schema",
        "id": "bar",
        "parent": "root",
        "title": "bar",
        "type": "schema",
        "updated": "1",
      },
      "ch1": Object {
        "body": "",
        "children": Array [],
        "created": "1",
        "custom": undefined,
        "data": Object {},
        "desc": "",
        "fname": "bar.schema",
        "id": "ch1",
        "parent": "bar",
        "title": "ch1",
        "type": "schema",
        "updated": "1",
      },
    },
    "version": 1,
  },
  "foo": Object {
    "fname": "foo.schema",
    "imports": null,
    "root": Object {
      "body": "",
      "children": Array [
        "ch1",
      ],
      "created": "1",
      "custom": null,
      "data": Object {},
      "desc": "",
      "fname": "foo.schema",
      "id": "foo",
      "parent": "root",
      "title": "foo",
      "type": "schema",
      "updated": "1",
    },
    "schemas": Object {
      "ch1": Object {
        "body": "",
        "children": Array [],
        "created": "1",
        "custom": null,
        "data": Object {},
        "desc": "",
        "fname": "foo.schema",
        "id": "ch1",
        "parent": "foo",
        "title": "ch1",
        "type": "schema",
        "updated": "1",
      },
      "foo": Object {
        "body": "",
        "children": Array [
          "ch1",
        ],
        "created": "1",
        "custom": null,
        "data": Object {},
        "desc": "",
        "fname": "foo.schema",
        "id": "foo",
        "parent": "root",
        "title": "foo",
        "type": "schema",
        "updated": "1",
      },
    },
    "version": 1,
  },
  "root": Object {
    "fname": "root.schema",
    "imports": Array [],
    "root": Object {
      "body": "",
      "children": Array [],
      "created": "1",
      "custom": null,
      "data": Object {},
      "desc": "",
      "fname": "root.schema",
      "id": "root",
      "parent": null,
      "title": "root",
      "type": "schema",
      "updated": "1",
    },
    "schemas": Object {
      "root": Object {
        "body": "",
        "children": Array [],
        "created": "1",
        "custom": null,
        "data": Object {},
        "desc": "",
        "fname": "root.schema",
        "id": "root",
        "parent": null,
        "title": "root",
        "type": "schema",
        "updated": "1",
      },
    },
    "version": 1,
  },
}
`;

exports[`engine, schema/ basics/ write schema to existing module 1`] = `
Object {
  "foo": Object {
    "fname": "foo.schema",
    "imports": undefined,
    "root": Object {
      "body": "",
      "children": Array [
        "ch1",
        "ch2",
      ],
      "created": "1",
      "custom": undefined,
      "data": Object {},
      "desc": "",
      "fname": "foo.schema",
      "id": "foo",
      "parent": "root",
      "title": "foo",
      "type": "schema",
      "updated": "1",
    },
    "schemas": Object {
      "ch1": Object {
        "body": "",
        "children": Array [],
        "created": "1",
        "custom": undefined,
        "data": Object {},
        "desc": "",
        "fname": "foo.schema",
        "id": "ch1",
        "parent": "foo",
        "title": "ch1",
        "type": "schema",
        "updated": "1",
      },
      "ch2": Object {
        "body": "",
        "children": Array [],
        "created": "1",
        "custom": undefined,
        "data": Object {},
        "desc": "",
        "fname": "foo.schema",
        "id": "ch2",
        "parent": "foo",
        "title": "ch2",
        "type": "schema",
        "updated": "1",
      },
      "foo": Object {
        "body": "",
        "children": Array [
          "ch1",
          "ch2",
        ],
        "created": "1",
        "custom": undefined,
        "data": Object {},
        "desc": "",
        "fname": "foo.schema",
        "id": "foo",
        "parent": "root",
        "title": "foo",
        "type": "schema",
        "updated": "1",
      },
    },
    "version": 1,
  },
  "root": Object {
    "fname": "root.schema",
    "imports": Array [],
    "root": Object {
      "body": "",
      "children": Array [],
      "created": "1",
      "custom": null,
      "data": Object {},
      "desc": "",
      "fname": "root.schema",
      "id": "root",
      "parent": null,
      "title": "root",
      "type": "schema",
      "updated": "1",
    },
    "schemas": Object {
      "root": Object {
        "body": "",
        "children": Array [],
        "created": "1",
        "custom": null,
        "data": Object {},
        "desc": "",
        "fname": "root.schema",
        "id": "root",
        "parent": null,
        "title": "root",
        "type": "schema",
        "updated": "1",
      },
    },
    "version": 1,
  },
}
`;
